--- a/index.html
+++ b/index.html
@@ -15,4 +15,21 @@
   </h1>
   <img src = "Sukhoi_Design_Bureau,_054,_Sukhoi_Su-57_(49581303977).jpg"/>
 </body>
+  <table>
+    <th> Name </th>
+
+    <th> Age </th>
+
+    <th> Email </th>
+
+    <tr>
+      <td> Abilay lev tiger </td>
+
+      <td> 16 </td>
+
+      <td> batman@gmail.com </td>
+      
+    </tr>
+
+  </table>
 </html>
