--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button onclick="changeLanguage('en')">English</button>
     <button onclick="changeLanguage('ru')">Русский</button>
     
-    <h1 id="profile-title">Профиль сигма мэла Алмасулы Абылай 10С нагибатор тигр лев наш слоняра 3000 нео</h1>
+    <h1 id="profile-title">Профиль сигма мейла Алмасулы Абылай 10С нагибатор тигр лев наш слоняра 3000 нео</h1>
     <img src="Sukhoi_Design_Bureau,_054,_Sukhoi_Su-57_(49581303977).jpg" width="300"/>
     
     <table>
