--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,86 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Aircraft Gallery</title>
+    <style>
+        body {
+            background-color: #f8d7da;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            font-size: 28px;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+        .aircraft {
+            width: 300px;
+            border: 2px solid white;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        .aircraft img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        .aircraft p {
+            margin-top: 10px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <h1>Aircraft Gallery</h1>
+    <div class="gallery">
+        <div class="aircraft">
+            <img src="1200px-Saab_JAS_39_Gripen_at_Kaivopuisto_Air_Show,_June_2017_(altered)_copy.jpg" alt="JAS 39 Gripen">
+            <p>JAS 39 Gripen</p>
+        </div>
+        <div class="aircraft">
+            <img src="Kazakhstan receives six new Su-30SM multirole fighters from Russia 925 005-5fe0a2a4.jpg" alt="Su-30SM">
+            <p>Su-30SM</p>
+        </div>
+        <div class="aircraft">
+            <img src="210919-F-AF248-9084.jpg" alt="F-35A">
+            <p>F-35A</p>
+        </div>
+        <div class="aircraft">
+            <img src="F-14_Tomcat_VF-2.jpg" alt="F-14">
+            <p>F-14</p>
+        </div>
+        <div class="aircraft">
+            <img src="Ray_Wagner_Collection_Image_YF-23.jpg" alt="YF-23">
+            <p>YF-23</p>
+        </div>
+        <div class="aircraft">
+            <img src="235--mig-tit.jpg" alt="Mig-31">
+            <p>Mig-31</p>
+        </div>
+        <div class="aircraft">
+            <img src="Lockheed_XF-104_(modified).jpg" alt="F-104">
+            <p>F-104</p>
+        </div>
+        <div class="aircraft">
+            <img src="F-2-fighter-jets-of-the-Japan-Air-Self-Defense-Force-001.jpg" alt="F-2">
+            <p>F-2</p>
+        </div>
+        <div class="aircraft">
+            <img src="800px-An_air-to-air_left_side_view_of_an_F-15_Eagle_aircraft_releasing_an_anti-satellite_(ASAT)_missile_during_a_test.jpg" alt="F-15">
+            <p>F-15</p>
+        </div>
+        <div class="aircraft">
+            <img src="STS120LaunchHiRes-edit1.jpg" alt="Space Shuttle">
+            <p>Space Shuttle</p>
+        </div>
+    </div>
+</body>
+</html>
