--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
     </ul>
     
     <a href="gallery.html" class="button" id="gallery-button">Go to Gallery</a>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWyTJ3OttFEcv2-gkG5cWzFB6fJZgIVYlNbnI2qWUt8pWZCA/viewform?embedded=true" width="640" height="2243" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+
 </body>
 </html>
